# timewinder

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRIMITIVES.md  README.md  WORK_IN_PROGRESS.md  go.mod  go.sum  spec.go  spec_test.go  test_global_parse.go
cas/: cas.go  decompose.go  iterator_test.go  lru.go  lru_test.go  memory.go  recompose.go  refs.go  roundtrip_test.go  test_helpers.go  types.go
compile/: compile.go  compile_test.go
crates/starlark_compiler/: Cargo.toml
crates/starlark_compiler/src/: explore_test.rs  expr.rs  integration_test.rs  into_vm.rs  lib.rs
docs/: fixed_await.md  life_of_a_state.md
exec/: stack.go
integration/: cas_integration_test.go  model_test.go  temporal_test.go
interp/: call.go  call_test.go  canonicalize.go  iterator.go  iterator_test.go  run.go  run_test.go  run_test.go.bak  state.go  step.go  types.go
model/: evaluator.go  executor.go  format.go  livelock.go  multi_thread.go  multi_thread_test.go  properties_test.go  reporter.go  run.go  single_thread.go  spec.go  spec_test.go  state.go  work_items.go
test/: README.md  basic_features_test.go  binary_operators_test.go
testdata/: no_deadlock.star  no_deadlock.toml  simple_deadlock.star  simple_deadlock.toml  strong_fairness_test.star  strong_fairness_test.toml  test_append.star  test_funcall.star  test_funcall.toml  test_infinite_loop.star  test_infinite_loop.toml  test_iter.star  test_primitives.star  test_primitives.toml  test_replicas.star  test_replicas.toml  test_replicas_separate.star  test_replicas_separate.toml  test_simple.star  test_simple.toml  (+1 more)
(+123 files in other folders)
