[package]
name = "starlark_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starlark = {git = "https://github.com/facebookexperimental/starlark-rust", branch = "main"}
starlark_syntax = {path = "../starlark_syntax"}
anyhow = { workspace = true }
vm = {path = "../vm"}

[dev-dependencies]
indoc = "2"
